--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,8 @@ dependencies {
     implementation("org.mariadb.jdbc:mariadb-java-client")
     implementation('com.h2database:h2')
 
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
+    implementation('org.springframework.session:spring-session-jdbc') // 세션 저장소를 DB로 선택
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
